@@ -12,11 +12,16 @@ B) open a Cmd windows (i.e., a DOS box) for the target environment
    (target OS version; free vs checked build; x86, AMD64, or IA64).
    This is picked from the "Start\Developer Kits" path.
 
-C) go to the netperf\src directory and type "build /cD".
+C) enter the netperf\src directory
 
-D) the target files will be in a directory like:
-   NetPerf\objchk_wnet_IA64\IA64, NetServer\objchk_wnet_IA64\IA64
-   NetPerf\objfre_wnet_x86\i386, or NetPerf\objfre_wnet_AMD64\amd64
+D) Edit NetPerfDir\config.h and/or NetServerDir\config.h to enable the
+   desired optional features.
+
+E) while still in the netperf\src directory type "build /cD".
+
+F) the target files will be in a directory like:
+   NetPerfDir\objchk_wnet_IA64\IA64, NetServerDir\objchk_wnet_IA64\IA64
+   NetPerfDir\objfre_wnet_x86\i386, or NetPerfDir\objfre_wnet_AMD64\amd64
 
 NOTE: If any components of the path (ie the full names of the files,
 including parent directories) contain spaces (eg "My Documents"),
